[gd_scene load_steps=21 format=2]

[ext_resource path="res://PanelBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://InventoryPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Player.png" type="Texture" id=6]
[ext_resource path="res://Game_Saved.tscn" type="PackedScene" id=7]
[ext_resource path="res://FADE4.tres" type="Animation" id=8]
[ext_resource path="res://FadeAnimation2.tres" type="Animation" id=9]
[ext_resource path="res://TextPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://LICombat.gd" type="Script" id=11]
[ext_resource path="res://SaveDown.tres" type="Animation" id=12]
[ext_resource path="res://Assets/122x68.png" type="Texture" id=13]
[ext_resource path="res://Assets/LI_Back.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "DealDmg"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32.4934, 66.0349 ), Vector2( 26.4934, 66.0349 ), Vector2( 39.4934, 66.0349 ), Vector2( 32.493, 66.035 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "IDLE"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32.4934, 66.0349 ), Vector2( 32.4934, 65.0349 ), Vector2( 32.4934, 66.0349 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "PDmg1"
tracks/0/type = "value"
tracks/0/path = NodePath("PDmgLbl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 69 ), Vector2( 32, 46 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PDmgLbl:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "PDmg2"
tracks/0/type = "value"
tracks/0/path = NodePath("PDmgLbl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 13, 69 ), Vector2( 13, 38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PDmgLbl:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32.4934, 66.0349 ), Vector2( 38.4934, 66.0349 ), Vector2( 34.4934, 66.0349 ), Vector2( 31.4934, 66.0349 ), Vector2( 32.493, 66.035 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "enemydead"
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 114, 38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enemy:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Enemy:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="LICombat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="." instance=ExtResource( 4 )]

[node name="MainPanel" parent="." instance=ExtResource( 1 )]

[node name="GraphicsPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 134.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LI_Back" type="Sprite" parent="GraphicsPanel"]
position = Vector2( 62.0386, 35.0279 )
texture = ExtResource( 14 )

[node name="TextPanel" parent="." instance=ExtResource( 10 )]

[node name="StatsPanel" parent="." instance=ExtResource( 3 )]

[node name="CombatOptions" type="VBoxContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 114.0
margin_right = 39.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeleeOBtn" type="Button" parent="CombatOptions"]
margin_right = 80.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 22 )
text = "Melee"

[node name="RangeOBtn" type="Button" parent="CombatOptions"]
margin_top = 26.0
margin_right = 80.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 22 )
text = "Ranged"

[node name="MovementOBtn" type="Button" parent="CombatOptions"]
margin_top = 52.0
margin_right = 80.0
margin_bottom = 74.0
rect_min_size = Vector2( 80, 22 )
text = "Movement"

[node name="MeleeOptions" type="VBoxContainer" parent="."]
visible = false
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 114.0
margin_right = 39.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QMeleeBtn" type="Button" parent="MeleeOptions"]
margin_right = 80.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 22 )
text = "Quick Strike"

[node name="HMeleeBtn" type="Button" parent="MeleeOptions"]
margin_top = 26.0
margin_right = 80.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 22 )
text = "Heavy Smash"

[node name="BMeleeBtn" type="Button" parent="MeleeOptions"]
margin_top = 52.0
margin_right = 80.0
margin_bottom = 74.0
rect_min_size = Vector2( 80, 22 )
text = "Burst Attack"

[node name="RangeOptions" type="VBoxContainer" parent="."]
visible = false
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 114.0
margin_right = 39.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PSBtn" type="Button" parent="RangeOptions"]
margin_right = 80.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 22 )
text = "Precision Shot"

[node name="CSBtn" type="Button" parent="RangeOptions"]
margin_top = 26.0
margin_right = 80.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 22 )
text = "Covered Shot"

[node name="DSBtn" type="Button" parent="RangeOptions"]
margin_top = 52.0
margin_right = 80.0
margin_bottom = 74.0
rect_min_size = Vector2( 80, 22 )
text = "Dual Shot"

[node name="MovementOptions" type="VBoxContainer" parent="."]
visible = false
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 114.0
margin_right = 39.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DodgeBtn" type="Button" parent="MovementOptions"]
margin_right = 80.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 22 )
text = "Dodge"

[node name="TripBtn" type="Button" parent="MovementOptions"]
margin_top = 26.0
margin_right = 80.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 22 )
text = "Trip"

[node name="FleeBtn" type="Button" parent="MovementOptions"]
margin_top = 52.0
margin_right = 80.0
margin_bottom = 74.0
rect_min_size = Vector2( 80, 22 )
text = "Flee"

[node name="BackBtn" type="Button" parent="."]
margin_left = 14.0
margin_top = 191.0
margin_right = 57.0
margin_bottom = 214.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpBtn" type="Button" parent="."]
margin_left = 87.0
margin_top = 191.0
margin_right = 130.0
margin_bottom = 214.0
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitOptions" type="VBoxContainer" parent="."]
visible = false
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 117.0
margin_right = 39.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="ExitOptions"]
margin_right = 80.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Die?"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE4 = ExtResource( 8 )
anims/FadeAnimation = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 0, 0, 0, 0 )
anchor_top = -0.00164238
anchor_right = 1.0
anchor_bottom = 0.998358
margin_left = -1.12724
margin_top = 1.06066
margin_right = -1.12724
margin_bottom = 1.06065
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 114, 38 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 32.4934, 66.0349 )
texture = ExtResource( 6 )

[node name="helpPnl" type="Panel" parent="."]
visible = false
margin_left = 6.0
margin_top = 9.0
margin_right = 138.0
margin_bottom = 189.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="helpPnl"]
margin_left = 54.0
margin_top = 3.0
margin_right = 78.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 24, 12 )
text = "Help:"
align = 1

[node name="Content" type="Label" parent="helpPnl"]
margin_left = 1.0
margin_top = 14.0
margin_right = 131.0
margin_bottom = 177.0
rect_min_size = Vector2( 128, 163 )
text = "Help:"
align = 1

[node name="Game_Saved" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )
margin_bottom = -0.000335693
mouse_filter = 2

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/SaveDown = ExtResource( 12 )

[node name="InventoryPanel" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PlayerAnimator" type="AnimationPlayer" parent="."]
anims/DealDmg = SubResource( 1 )
anims/IDLE = SubResource( 2 )
anims/PDmg1 = SubResource( 3 )
anims/PDmg2 = SubResource( 4 )
anims/RecDmg = SubResource( 5 )
anims/enemydead = SubResource( 6 )

[node name="PResLbl" type="Label" parent="."]
visible = false
margin_left = 9.0
margin_top = 32.0
margin_right = 21.0
margin_bottom = 44.0
text = "R:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PDmgLbl" type="Label" parent="."]
visible = false
margin_left = 13.0
margin_top = 69.0
margin_right = 35.0
margin_bottom = 81.0001
text = "DMG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PStunLbl" type="Label" parent="."]
visible = false
margin_left = 9.0
margin_top = 39.0
margin_right = 28.0
margin_bottom = 51.0
text = "Stn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="122x68" type="Sprite" parent="."]
visible = false
position = Vector2( 71.9407, 47.0732 )
scale = Vector2( 1.00258, 1 )
texture = ExtResource( 13 )
[connection signal="pressed" from="CombatOptions/MeleeOBtn" to="." method="_on_MeleeOBtn_pressed"]
[connection signal="pressed" from="CombatOptions/RangeOBtn" to="." method="_on_RangeOBtn_pressed"]
[connection signal="pressed" from="CombatOptions/MovementOBtn" to="." method="_on_MovementOBtn_pressed"]
[connection signal="pressed" from="MeleeOptions/QMeleeBtn" to="." method="_on_QMeleeBtn_pressed"]
[connection signal="pressed" from="MeleeOptions/HMeleeBtn" to="." method="_on_HMeleeBtn_pressed"]
[connection signal="pressed" from="MeleeOptions/BMeleeBtn" to="." method="_on_BMeleeBtn_pressed"]
[connection signal="pressed" from="RangeOptions/PSBtn" to="." method="_on_PSBtn_pressed"]
[connection signal="pressed" from="RangeOptions/CSBtn" to="." method="_on_CSBtn_pressed"]
[connection signal="pressed" from="RangeOptions/DSBtn" to="." method="_on_DSBtn_pressed"]
[connection signal="pressed" from="MovementOptions/DodgeBtn" to="." method="_on_DodgeBtn_pressed"]
[connection signal="pressed" from="MovementOptions/TripBtn" to="." method="_on_TripBtn_pressed"]
[connection signal="pressed" from="MovementOptions/FleeBtn" to="." method="_on_FleeBtn_pressed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="HelpBtn" to="." method="_on_HelpBtn_pressed"]
[connection signal="pressed" from="ExitOptions/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ExitOptions/Button2" to="." method="_on_Button1_pressed"]
[connection signal="on_death" from="Enemy" to="." method="_on_Enemy_on_death"]
